buttons and colors

--- a/index.html
+++ b/index.html
@@ -28,14 +28,45 @@
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
       <hr>
       <article>
-        <div class="s-col s-5">
-          <h1>5 Columns</h1>
+        <div class="s-col s-3">
+          <h1>3 Columns</h1>
         </div>
-        <div class="s-col s-15">
-          <h1>15 Columns</h1>
+        <div class="s-col s-9">
+          <h1>9 Columns</h1>
         </div>
-        <div class="s-break"></div>
       </article>
+      <article>
+        <h1>Buttons</h1>
+        <div class="s-col s-2">
+          <button class="s-btn">Default</button>
+          <p>Default</p>
+        </div>
+        <div class="s-col s-2">
+          <button class="s-btn s-red">Red</button>
+          <p class="s-red">Red</p>
+        </div>
+        <div class="s-col s-2">
+          <button class="s-btn s-orange">Orange</button>
+          <p class="s-orange">Orange</p>
+        </div>
+        <div class="s-col s-2">
+          <button class="s-btn s-yellow">Yellow</button>
+          <p class="s-yellow">Yellow</p>
+        </div>
+        <div class="s-col s-2">
+          <button class="s-btn s-green">Green</button>
+          <p class="s-green">Green</p>
+        </div>
+        <div class="s-col s-2">
+          <button class="s-btn s-blue">Blue</button>
+          <p class="s-blue">Blue</p>
+        </div>
+        <div class="s-col s-2">
+          <button class="s-btn s-violet">Violet</button>
+          <p class="s-violet">Violet</p>
+        </div>
+      </article>
+      <div class="s-break"></div>
       <hr>
       <h1>Heading 1</h1>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
