--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
       <hr>
       <article>
-        <div class="s-col s-3">
+        <div class="s-col s-sm-3">
           <h1>3 Columns</h1>
         </div>
-        <div class="s-col s-9">
+        <div class="s-col s-sm-9">
           <h1>9 Columns</h1>
         </div>
       </article>
