adding the rest of the responsive styles.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,19 @@
       <hr>
     </header>
     <main>
+      <div class="s-col s-sm-6 s-lg-3"> 
+        <p>Column</p>
+      </div>
+      <div class="s-col s-sm-6 s-lg-3"> 
+        <p>Column</p>
+      </div>
+      <div class="s-col s-sm-6 s-lg-3"> 
+        <p>Column</p>
+      </div>
+      <div class="s-col s-sm-6 s-lg-3"> 
+        <p>Column</p>
+      </div>
+      <hr>
       <h1>Heading 1</h1>
       <h2>Heading 2</h2>
       <h3>Heading 3</h3>
