--- a/index.html
+++ b/index.html
@@ -22,11 +22,16 @@
         <p>Column</p>
       </div>
       <hr>
-      <h1>Heading 1</h1>
-      <h2>Heading 2</h2>
-      <h3>Heading 3</h3>
-      <h4>Heading 4</h4>
-      <h5>Heading 5</h5>
+      <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</h1>
+      <tempor>incididunt ut labore et dolore magna aliqua.</tempor>
+      <h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</h2>
+      <tempor>incididunt ut labore et dolore magna aliqua.</tempor>
+      <h3>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</h3>
+      <tempor>incididunt ut labore et dolore magna aliqua.</tempor>
+      <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</h4>
+      <tempor>incididunt ut labore et dolore magna aliqua.</tempor>
+      <h5>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</h5>
+      <tempor>incididunt ut labore et dolore magna aliqua.</tempor>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
       <hr>
       <h1>Heading 1</h1>
@@ -85,10 +90,10 @@
       </article>
       <div class="s-break"></div>
       <div class="s-modal">
-        <h3>Modal Title<small class="s-close">&times;</small></h3>
+        <h5>Modal Title<small class="s-close">&times;</small></h5>
         <p>Modal content</p>
-        <footer>
-          <button class="s-btn s-green">Go</button>
+        <footer><span>Some text</span>
+          <button class="s-btn s-blue">Go</button>
         </footer>
       </div>
       <hr>
