--- a/index.html
+++ b/index.html
@@ -9,18 +9,25 @@
       <hr>
     </header>
     <main>
-      <div class="s-col s-sm-6 s-lg-3"> 
-        <p>Column</p>
-      </div>
-      <div class="s-col s-sm-6 s-lg-3"> 
-        <p>Column</p>
-      </div>
-      <div class="s-col s-sm-6 s-lg-3"> 
-        <p>Column</p>
-      </div>
-      <div class="s-col s-sm-6 s-lg-3"> 
-        <p>Column</p>
-      </div>
+      <article>
+        <div class="s-col s-sm-6 s-md-4 s-lg-3"> 
+          <h5>Heading</h5>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+        <div class="s-col s-sm-6 s-md-4 s-lg-3"> 
+          <h5>Heading</h5>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+        <div class="s-col s-sm-6 s-md-4 s-lg-3"> 
+          <h5>Heading</h5>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+        <div class="s-col s-sm-6 s-md-4 s-lg-3"> 
+          <h5>Heading</h5>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        </div>
+      </article>
+      <div class="s-break"></div>
       <hr>
       <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</h1>
       <tempor>incididunt ut labore et dolore magna aliqua.</tempor>
@@ -90,8 +97,12 @@
       </article>
       <div class="s-break"></div>
       <div class="s-modal">
-        <h5>Modal Title<small class="s-close">&times;</small></h5>
-        <p>Modal content</p>
+        <header>
+          <h5>Modal Title<small class="s-close">&times;</small></h5>
+        </header>
+        <main>
+          <p>Modal content</p>
+        </main>
         <footer><span>Some text</span>
           <button class="s-btn s-blue">Go</button>
         </footer>
