--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <hr>
     </header>
     <main>
-      <article>
+      <article class="s-row">
         <div class="s-col s-sm-6 s-md-4 s-lg-3"> 
           <h5>Heading</h5>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
@@ -27,7 +27,6 @@
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </div>
       </article>
-      <div class="s-break"></div>
       <hr>
       <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</h1>
       <tempor>incididunt ut labore et dolore magna aliqua.</tempor>
@@ -52,7 +51,7 @@
       <h5>Heading 5</h5>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
       <hr>
-      <article>
+      <article class="s-row">
         <div class="s-col s-sm-3">
           <h1>3 Columns</h1>
         </div>
@@ -60,8 +59,10 @@
           <h1>9 Columns</h1>
         </div>
       </article>
-      <article>
-        <h1>Buttons</h1>
+      <article class="s-row">
+        <div class="s-col s-12"> 
+          <h3>Buttons</h3>
+        </div>
         <div class="s-col s-4">
           <button id="modal" class="s-btn">Default</button>
           <p>Default, click to launch a modal</p>
@@ -75,7 +76,7 @@
           <p class="s-orange">Orange</p>
         </div>
       </article>
-      <article>
+      <article class="s-row">
         <div class="s-col s-4">
           <button class="s-btn s-yellow">Yellow</button>
           <p class="s-yellow">Yellow</p>
@@ -89,7 +90,7 @@
           <p class="s-blue">Blue</p>
         </div>
       </article>
-      <article>
+      <article class="s-row">
         <div class="s-col s-4">
           <button class="s-btn s-violet">Violet</button>
           <p class="s-violet">Violet</p>
