--- a/index.html
+++ b/index.html
@@ -9,6 +9,19 @@
       <hr>
     </header>
     <main>
+      <nav class="s-bar">
+        <ul>
+          <li><a href="#">Item</a></li>
+          <li><a href="#">Item</a></li>
+          <li>
+            <input type="text" placeholder="Name">
+          </li>
+        </ul>
+        <ul style="float:right">
+          <li><a href="#">Item</a></li>
+          <li><a href="#" class="s-btn">Item</a></li>
+        </ul>
+      </nav>
       <article class="s-row">
         <div class="s-col s-sm-6 s-md-4 s-lg-3"> 
           <h5>Heading</h5>
