--- a/index.html
+++ b/index.html
@@ -17,9 +17,34 @@
             <input type="text" placeholder="Name">
           </li>
         </ul>
-        <ul style="float:right">
+        <ul class="s-right">
+          <li><a href="#">Item</a></li>
+        </ul>
+      </nav>
+      <nav class="s-bar">
+        <ul>
+          <li><a href="#" class="s-btn">Item</a></li>
+          <li><a href="#" class="s-btn s-red">Item</a></li>
+          <li><a href="#" class="s-btn s-orange">Item</a></li>
+          <li><a href="#" class="s-btn s-yellow">Item</a></li>
+          <li><a href="#" class="s-btn s-green">Item</a></li>
+          <li><a href="#" class="s-btn s-blue">Item</a></li>
+          <li><a href="#" class="s-btn s-violet">Item</a></li>
+        </ul>
+        <ul class="s-right">
+          <li><a href="#" class="s-btn">Item</a></li>
+        </ul>
+      </nav>
+      <nav class="s-bar">
+        <ul>
           <li><a href="#">Item</a></li>
           <li><a href="#" class="s-btn">Item</a></li>
+          <li><a href="#">Item</a></li>
+        </ul>
+        <ul class="s-right">
+          <li><a href="#">Item</a></li>
+          <li><a href="#" class="s-btn">Item</a></li>
+          <li><a href="#">Item</a></li>
         </ul>
       </nav>
       <article class="s-row">
