--- a/index.html
+++ b/index.html
@@ -47,6 +47,20 @@
           <li><a href="#">Item</a></li>
         </ul>
       </nav>
+      <nav class="s-bar">
+        <ul>
+          <li><a href="#" class="s-bar-heading">Website</a></li>
+          <li><a href="#">Item</a></li>
+          <li>Item that is not a link.</li>
+          <li><a href="#" class="s-btn">Item</a></li>
+          <li><a href="#">Item</a></li>
+        </ul>
+        <ul class="s-right">
+          <li><a href="#">Item</a></li>
+          <li><a href="#" class="s-btn">Item</a></li>
+          <li><a href="#">Item</a></li>
+        </ul>
+      </nav>
       <article class="s-row">
         <div class="s-col s-sm-6 s-md-4 s-lg-3"> 
           <h5>Heading</h5>
@@ -97,44 +111,6 @@
           <h1>9 Columns</h1>
         </div>
       </article>
-      <article class="s-row">
-        <div class="s-col s-12"> 
-          <h3>Buttons</h3>
-        </div>
-        <div class="s-col s-4">
-          <button id="modal" class="s-btn">Default</button>
-          <p>Default, click to launch a modal</p>
-        </div>
-        <div class="s-col s-4">
-          <button class="s-btn s-red">Red</button>
-          <p class="s-red">Red</p>
-        </div>
-        <div class="s-col s-4">
-          <button class="s-btn s-orange">Orange</button>
-          <p class="s-orange">Orange</p>
-        </div>
-      </article>
-      <article class="s-row">
-        <div class="s-col s-4">
-          <button class="s-btn s-yellow">Yellow</button>
-          <p class="s-yellow">Yellow</p>
-        </div>
-        <div class="s-col s-4">
-          <button class="s-btn s-green">Green</button>
-          <p class="s-green">Green</p>
-        </div>
-        <div class="s-col s-4">
-          <button class="s-btn s-blue">Blue</button>
-          <p class="s-blue">Blue</p>
-        </div>
-      </article>
-      <article class="s-row">
-        <div class="s-col s-4">
-          <button class="s-btn s-violet">Violet</button>
-          <p class="s-violet">Violet</p>
-        </div>
-      </article>
-      <div class="s-break"></div>
       <div class="s-modal">
         <header>
           <h5>Modal Title<small class="s-close">&times;</small></h5>
