--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <main>
       <nav class="s-bar">
         <ul>
-          <li><span class="s-left fa fa-search"></span><a href="#">Item</a></li>
+          <li><a href="#"> <span class="s-left fa fa-search"></span> Item</a></li>
           <li><a href="#">Item</a></li>
           <li>
             <input type="search" placeholder="Name">
@@ -23,7 +23,7 @@
       </nav>
       <nav class="s-bar">
         <ul>
-          <li><a href="#" class="s-btn">Item</a></li>
+          <li><a id="modal" href="#" class="s-btn">Item</a></li>
           <li><a href="#" class="s-btn s-red">Item</a></li>
           <li><a href="#" class="s-btn s-orange">Item</a></li>
           <li><a href="#" class="s-btn s-yellow">Item</a></li>
@@ -61,6 +61,54 @@
           <li><a href="#">Item</a></li>
         </ul>
       </nav>
+      <article class="s-row">
+        <div class="s-col s-4">
+          <nav class="s-bar">
+            <ul>
+              <li><a href="#" class="s-bar-heading">Website</a></li>
+              <li><a href="#">Item</a></li>
+              <li>Item that is not a link.</li>
+              <li><a href="#" class="s-btn">Item</a></li>
+              <li><a href="#">Item</a></li>
+            </ul>
+            <ul class="s-right">
+              <li><a href="#">Item</a></li>
+              <li><a href="#" class="s-btn">Item</a></li>
+              <li><a href="#">Item</a></li>
+            </ul>
+          </nav>
+        </div>
+        <div class="s-col s-4">
+          <nav class="s-bar">
+            <ul>
+              <li><a href="#" class="s-btn">Item</a></li>
+              <li> <a href="#" class="s-btn">Item</a></li>
+              <li><a href="#" class="s-btn">Item</a></li>
+              <li><a href="#" class="s-btn">Item</a></li>
+            </ul>
+            <ul class="s-right">
+              <li><a href="#" class="s-btn">Item</a></li>
+              <li><a href="#" class="s-btn">Item</a></li>
+              <li><a href="#">Item</a></li>
+            </ul>
+          </nav>
+        </div>
+        <div class="s-col s-4">
+          <nav class="s-bar">
+            <ul>
+              <li><a href="#" class="s-btn">Item</a></li>
+              <li>Item that is not a link.</li>
+              <li><a href="#" class="s-btn">Item</a></li>
+              <li><a href="#">Item</a></li>
+            </ul>
+            <ul class="s-right">
+              <li><a href="#" class="s-btn">Item</a></li>
+              <li><a href="#" class="s-btn">Item</a></li>
+              <li><a href="#">Item</a></li>
+            </ul>
+          </nav>
+        </div>
+      </article>
       <article class="s-row">
         <div class="s-col s-sm-6 s-md-4 s-lg-3"> 
           <h5>Heading</h5>
