--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
           <li>
             <input type="search" placeholder="Name">
           </li>
+          <li class="s-dropdown"><a href="#">Dropdown</a>
+            <ul>
+              <li><a href="#">Dropdown Item</a></li>
+              <li><a href="#">Dropdown Item</a></li>
+            </ul>
+          </li>
         </ul>
         <ul class="s-right">
           <li><a href="#">Item</a></li>
