--- a/index.html
+++ b/index.html
@@ -3,8 +3,29 @@
   <head>
     <link rel="stylesheet" href="css/start.css">
   </head>
-  <body class="s-wrapper">
+  <body style="padding-top: 40px" class="s-wrapper">
     <header>
+      <nav class="s-bar s-fixed">
+        <div class="s-wrapper">
+          <ul>
+            <li><a href="#" class="s-bar-heading">Website</a></li>
+            <li><a href="#"> <span class="s-left fa fa-search"></span> Item</a></li>
+            <li><a href="#">Item</a></li>
+            <li>
+              <input type="search" placeholder="Name">
+            </li>
+            <li class="s-dropdown"><a href="#">Dropdown</a>
+              <ul>
+                <li><a href="#">Dropdown Item</a></li>
+                <li><a href="#">Dropdown Item</a></li>
+              </ul>
+            </li>
+          </ul>
+          <ul class="s-right">
+            <li><a href="#">Item</a></li>
+          </ul>
+        </div>
+      </nav>
       <h1>Start.css Test Page</h1>
       <hr>
     </header>
