--- a/index2.html
+++ b/index2.html
@@ -34,17 +34,43 @@
             <h1>Acme Industries</h1>
           </div>
           <div class="s-sm-4 s-col">
-            <nav class="s-bar">
+            <nav class="s-bar s-dark">
               <ul>
                 <li><a href="#">Get started today</a></li>
               </ul>
               <ul class="s-right">
-                <li><a href="#" class="s-btn s-green">Go.</a></li>
+                <li><a id="modal" href="#" class="s-btn s-green">Go.</a></li>
               </ul>
             </nav>
           </div>
         </div>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <div class="s-modal">
+          <header>
+            <h5>Get Started Today<small class="s-close">&times;</small></h5>
+          </header>
+          <main>
+            <div class="s-row">
+              <div class="s-col s-6">
+                <p>Thanks for signing up!</p>
+              </div>
+              <div class="s-col s-6">
+                <p> 
+                  <label>Email</label>
+                  <input type="email">
+                </p>
+              </div>
+            </div>
+          </main>
+          <footer class="s-bar">
+            <ul>
+              <li><a href="#" class="s-btn s-clear">Cancel</a></li>
+            </ul>
+            <ul class="s-right">
+              <li><a href="#" class="s-btn s-blue">Yes.</a></li>
+            </ul>
+          </footer>
+        </div>
       </div>
     </main>
     <footer></footer>
