--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
     </header>
     <main>
       <div class="s-wrapper">
+        <div class="s-col">
+          <p>To learn more, <a href="#abc">Read this.</a></p>
+        </div>
+        <div class="s-break"></div>
         <nav class="s-bar">
           <ul>
             <li><a href="#"> <span class="s-left fa fa-search"></span> Item</a></li>
@@ -229,8 +233,13 @@
           <main>
             <p>Modal content</p>
           </main>
-          <footer><span>Some text</span>
-            <button class="s-btn s-blue">Go</button>
+          <footer class="s-bar">
+            <ul>
+              <li><a href="#" class="s-btn s-clear">Cancel</a></li>
+            </ul>
+            <ul class="s-right">
+              <li><a href="#" class="s-btn s-blue">Yes.</a></li>
+            </ul>
           </footer>
         </div>
         <hr>
