better dropdowns (but not finished yet)

--- a/index2.html
+++ b/index2.html
@@ -11,7 +11,13 @@
             <li><a href="#" class="s-bar-heading"> <span class="fa fa-book"></span> Acme</a></li>
             <li><a href="#"> <span class="s-left fa fa-search"></span> Item</a></li>
             <li><a href="#">Item</a></li>
-            <li class="s-dropdown"><a href="#">Dropdown</a>
+            <li class="s-dropdown"><a href="#">Dropdown1</a>
+              <ul>
+                <li><a href="index.html">Sandbox</a></li>
+                <li><a href="index2.html">Realistic</a></li>
+              </ul>
+            </li>
+            <li class="s-dropdown"><a href="#">Dropdown2</a>
               <ul>
                 <li><a href="index.html">Sandbox</a></li>
                 <li><a href="index2.html">Realistic</a></li>
