--- a/index.html
+++ b/index.html
@@ -66,6 +66,13 @@
             <li><a href="#" class="s-btn s-violet">Item</a></li>
           </ul>
           <ul class="s-right">
+            <li class="s-dropdown">
+              <button class="s-btn s-violet">Dropdown</button>
+              <ul>
+                <li><a href="#">Dropdown Item</a></li>
+                <li><a href="#">Dropdown Item</a></li>
+              </ul>
+            </li>
             <li><a href="#" class="s-btn">Item</a></li>
           </ul>
         </nav>
