--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   </head>
   <body style="padding-top: 40px">
     <header>
-      <nav class="s-bar s-fixed">
+      <nav class="s-box s-fixed">
         <div class="s-wrapper">
           <ul>
-            <li><a href="#" class="s-bar-heading">Website</a></li>
+            <li><a href="#" class="s-box-heading">Website</a></li>
             <li><a href="#"> <span class="s-left fa fa-search"></span> Item</a></li>
             <li><a href="#">Item</a></li>
             <li>
@@ -37,7 +37,7 @@
           <p>To learn more, <a href="#abc">Read this.</a></p>
         </div>
         <div class="s-break"></div>
-        <nav class="s-bar">
+        <nav class="s-box">
           <ul>
             <li><a href="#"> <span class="s-left fa fa-search"></span> Item</a></li>
             <li><a href="#">Item</a></li>
@@ -55,7 +55,7 @@
             <li><a href="#">Item</a></li>
           </ul>
         </nav>
-        <nav class="s-bar">
+        <nav class="s-box">
           <ul>
             <li><a id="modal" href="#" class="s-btn">Item</a></li>
             <li><a href="#" class="s-btn s-red">Item</a></li>
@@ -76,7 +76,7 @@
             <li><a href="#" class="s-btn">Item</a></li>
           </ul>
         </nav>
-        <nav class="s-bar">
+        <nav class="s-box">
           <ul>
             <li><a href="#">Item</a></li>
             <li><a href="#" class="s-btn">Item</a></li>
@@ -88,9 +88,9 @@
             <li><a href="#">Item</a></li>
           </ul>
         </nav>
-        <nav class="s-bar">
+        <nav class="s-box">
           <ul>
-            <li><a href="#" class="s-bar-heading">Website</a></li>
+            <li><a href="#" class="s-box-heading">Website</a></li>
             <li><a href="#">Item</a></li>
             <li>Item that is not a link.</li>
             <li><a href="#" class="s-btn">Item</a></li>
@@ -104,9 +104,9 @@
         </nav>
         <article class="s-row">
           <div class="s-col s-4">
-            <nav class="s-bar">
+            <nav class="s-box">
               <ul>
-                <li><a href="#" class="s-bar-heading">Website</a></li>
+                <li><a href="#" class="s-box-heading">Website</a></li>
                 <li><a href="#">Item</a></li>
                 <li>Item that is not a link.</li>
                 <li><a href="#" class="s-btn">Item</a></li>
@@ -120,7 +120,7 @@
             </nav>
           </div>
           <div class="s-col s-4">
-            <nav class="s-bar">
+            <nav class="s-box">
               <ul>
                 <li><a href="#" class="s-btn">Item</a></li>
                 <li> <a href="#" class="s-btn">Item</a></li>
@@ -135,7 +135,7 @@
             </nav>
           </div>
           <div class="s-col s-4">
-            <nav class="s-bar">
+            <nav class="s-box">
               <ul>
                 <li><a href="#" class="s-btn">Item</a></li>
                 <li>Item that is not a link.</li>
@@ -152,7 +152,7 @@
         </article>
         <article class="s-row">
           <div class="s-col s-4">
-            <nav class="s-bar">
+            <nav class="s-box">
               <ul>
                 <li><a href="#" class="s-btn">Item</a></li>
                 <li><a href="#" class="s-btn s-blue">Item</a></li>
@@ -161,7 +161,7 @@
             </nav>
           </div>
           <div class="s-col s-4">
-            <nav class="s-bar s-dark">
+            <nav class="s-box s-dark">
               <ul>
                 <li><a href="#" class="s-btn">Item</a></li>
                 <li><a href="#" class="s-btn s-blue">Item</a></li>
@@ -170,7 +170,7 @@
             </nav>
           </div>
           <div class="s-col s-4">
-            <nav class="s-bar s-clear">
+            <nav class="s-box s-clear">
               <ul>
                 <li><a href="#" class="s-btn">Item</a></li>
                 <li><a href="#" class="s-btn s-blue">Item</a></li>
@@ -187,7 +187,7 @@
           <div class="s-col s-sm-6 s-md-4 s-lg-3"> 
             <h5>Heading</h5>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            <nav class="s-bar">
+            <nav class="s-box">
               <ul>
                 <li><a href="#">Toolbar </a></li>
               </ul>
@@ -240,7 +240,7 @@
           <main>
             <p>Modal content</p>
           </main>
-          <footer class="s-bar">
+          <footer class="s-box">
             <ul>
               <li><a href="#" class="s-btn s-clear">Cancel</a></li>
             </ul>
