--- a/index2.html
+++ b/index2.html
@@ -5,29 +5,15 @@
   </head>
   <body style="padding-top: 40px">
     <header>
-      <nav class="s-bar s-fixed">
+      <nav class="s-box s-fixed">
         <div class="s-wrapper">
           <ul>
-            <li><a href="#" class="s-bar-heading"> <span class="fa fa-book"></span> Acme</a></li>
-            <li><a href="#"> <span class="s-left fa fa-search"></span> Item</a></li>
-            <li><a href="#">Item</a></li>
-            <li class="s-dropdown"><a href="#">Dropdown1</a>
+            <li><a href="#" class="s-box-heading"> <span class="fa fa-book"></span> Start.css</a></li>
+            <li class="s-dropdown"><a href="#">Menu</a>
               <ul>
                 <li><a href="index.html">Sandbox</a></li>
-                <li><a href="index2.html">Realistic</a></li>
+                <li><a href="index2.html">Docs</a></li>
               </ul>
-            </li>
-            <li class="s-dropdown"><a href="#">Dropdown2</a>
-              <ul>
-                <li><a href="index.html">Sandbox</a></li>
-                <li><a href="index2.html">Realistic</a></li>
-              </ul>
-            </li>
-          </ul>
-          <ul class="s-right">
-            <li><a href="#">Item</a></li>
-            <li>
-              <input type="search" placeholder="Name">
             </li>
           </ul>
         </div>
@@ -37,45 +23,15 @@
       <div class="s-wrapper">
         <div class="s-row">
           <div class="s-sm-8 s-col">
-            <h1>Acme Industries</h1>
+            <h1>Start.css</h1>
+            <p>These are the temporary docs for Start.css. Eventually there will be something much better-looking here.</p>
           </div>
           <div class="s-sm-4 s-col">
-            <nav class="s-bar s-dark">
-              <ul>
-                <li><a href="#">Get started today</a></li>
-              </ul>
-              <ul class="s-right">
-                <li><a id="modal" href="#" class="s-btn s-green">Go.</a></li>
-              </ul>
-            </nav>
-          </div>
-        </div>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        <div class="s-modal">
-          <header>
-            <h5>Get Started Today<small class="s-close">&times;</small></h5>
-          </header>
-          <main>
-            <div class="s-row">
-              <div class="s-col s-6">
-                <p>Thanks for signing up!</p>
-              </div>
-              <div class="s-col s-6">
-                <p> 
-                  <label>Email</label>
-                  <input type="email">
-                </p>
-              </div>
-            </div>
-          </main>
-          <footer class="s-bar">
+            <h5>Directory</h5>
             <ul>
-              <li><a href="#" class="s-btn s-clear">Cancel</a></li>
+              <li><a href="#">One</a></li>
             </ul>
-            <ul class="s-right">
-              <li><a href="#" class="s-btn s-blue">Yes.</a></li>
-            </ul>
-          </footer>
+          </div>
         </div>
       </div>
     </main>
