--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <li class="s-dropdown"><a href="#">Directory</a>
               <ul>
                 <li><a href="index.html">Sandbox</a></li>
-                <li><a href="index2.html">Realistic</a></li>
+                <li><a href="docs.html">Docs</a></li>
               </ul>
             </li>
           </ul>
