--- a/docs.html
+++ b/docs.html
@@ -26,6 +26,8 @@
             <h1>Start.css</h1>
             <p>These are the temporary docs for Start.css. Eventually there will be something much better-looking here.</p>
             <hr>
+            <h2 id="boxes">Boxes</h2>
+            <p>Boxes are the most versatile component of the Start library. These can function as navigation menus, toolboxes, or any generic container.</p>
             <h2 id="growls">Growls</h2>
             <p>Growls are unobtrusive pop up messages called via JavaScript. A basic call might look like this:</p>
             <pre>$.sGrowl({
