--- a/docs.html
+++ b/docs.html
@@ -50,6 +50,7 @@
               <tbody>
                 <tr>
                   <td><code>icon</code></td>
+                  <td>&mdash;</td>
                   <td>Icon to appear before the heading. Choose from the <a href="http://fontawesome.io/">Font Awesome 4 library</a> without the preceding "fa-"</td>
                 </tr>
                 <tr>
@@ -102,8 +103,8 @@
                 <li class="s-box-heading">
                   <p>Directory</p>
                 </li>
+                <li><a href="#growls">Boxes</a></li>
                 <li><a href="#growls">Growls</a></li>
-                <li><a href="#">Something else</a></li>
               </ul>
             </div>
           </div>
