--- a/docs.html
+++ b/docs.html
@@ -22,7 +22,7 @@
     <main>
       <div class="s-wrapper">
         <div class="s-row">
-          <div class="s-sm-8 s-col">
+          <div class="s-sm-8 s-lg-9 s-col">
             <h1>Start.css</h1>
             <p>These are the temporary docs for Start.css. Eventually there will be something much better-looking here.</p>
             <hr>
@@ -97,7 +97,7 @@
               <button onclick="$.sGrowl({color: 'red', icon: 'book',title: 'Test',text: 'Testing...1, 2, 3', delay: 3000, container: '#example-container'})" class="s-btn s-blue">Try it</button>
             </p>
           </div>
-          <div class="s-sm-4 s-col">
+          <div class="s-sm-4 s-lg-3 s-col">
             <div class="s-box s-box_vertical">
               <ul>
                 <li class="s-box-heading">
