--- a/docs.html
+++ b/docs.html
@@ -91,6 +91,43 @@
     &lt;/li&gt;
   &lt;/ul&gt;
 &lt;/nav&gt;</pre>
+            <h2 id="browsers">Browser Support </h2>
+            <p>Which browsers does start.css support? Latest.</p>
+            <p>IE11+, Chrome, Firefox 16+, and Safari (sort of) are all auto updating browsers. Because of this shift in the browser support ecosystem, we state the current latest browsers on the day of a Start.css stable release are the browsers that version supports. </p>
+            <p>For older browser support, download an earlier version of Start.css.</p>
+            <h2 id="colors">Colors</h2>
+            <p>Specially-applied colors are defined as .s-x where x is red, orange, yellow, green, blue, violet.</p>
+            <button class="s-btn">Submit</button>
+            <button class="s-btn s-red">Submit</button>
+            <button class="s-btn s-orange">Submit</button>
+            <button class="s-btn s-yellow">Submit</button>
+            <button class="s-btn s-green">Submit</button>
+            <button class="s-btn s-blue">Submit</button>
+            <button class="s-btn s-violet">Submit</button>
+            <p>Submit</p>
+            <p class="s-red">Submit</p>
+            <p class="s-orange">Submit</p>
+            <p class="s-yellow">Submit</p>
+            <p class="s-green">Submit</p>
+            <p class="s-blue">Submit</p>
+            <p class="s-violet">Submit</p>
+            <pre>&lt;button class=&quot;s-btn&quot;&gt;Submit&lt;/button&gt;
+&lt;button class=&quot;s-btn s-red&quot;&gt;Submit&lt;/button&gt;
+&lt;button class=&quot;s-btn s-orange&quot;&gt;Submit&lt;/button&gt;
+&lt;button class=&quot;s-btn s-yellow&quot;&gt;Submit&lt;/button&gt;
+&lt;button class=&quot;s-btn s-green&quot;&gt;Submit&lt;/button&gt;
+&lt;button class=&quot;s-btn s-blue&quot;&gt;Submit&lt;/button&gt;
+&lt;button class=&quot;s-btn s-violet&quot;&gt;Submit&lt;/button&gt;
+ 
+&lt;p&gt;Submit&lt;/p&gt;
+&lt;p class=&quot;s-red&quot;&gt;Submit&lt;/p&gt;
+&lt;p class=&quot;s-orange&quot;&gt;Submit&lt;/p&gt;
+&lt;p class=&quot;s-yellow&quot;&gt;Submit&lt;/p&gt;
+&lt;p class=&quot;s-green&quot;&gt;Submit&lt;/p&gt;
+&lt;p class=&quot;s-blue&quot;&gt;Submit&lt;/p&gt;
+&lt;p class=&quot;s-violet&quot;&gt;Submit&lt;/p&gt;</pre>
+            <p>By itself, this class will do nothing, but other elements will recognize these and apply their own respective theming.  </p>
+            <p>For example, .s-green on a button will make a green background with white text, but .s-green on a p or span will make the color green, but not the background.</p>
             <h2 id="grid">Grid</h2>
             <p>Start uses a 12 column grid. To create a gridded row, start with an <code>.s-row</code> container.</p>
             <pre>&lt;section class=&quot;s-row&quot;&gt;&lt;/section&gt;</pre>
@@ -245,6 +282,9 @@
             <p>
               <button onclick="$.sGrowl({color: 'red', icon: 'book',title: 'Test',text: 'Testing...1, 2, 3', delay: 3000, container: '#example-container'})" class="s-btn s-blue">Try it</button>
             </p>
+            <h2 id="typography">Typography</h2>
+            <p>Typography relies mostly on standard HTML5 elements.</p>
+            <p>Use hx (where x = 1-5) for headings and p, etc for basic text formatting.</p>
           </div>
           <div class="s-sm-4 s-lg-3 s-col">
             <div class="s-box s-box_vertical">
@@ -253,8 +293,11 @@
                   <p>Directory</p>
                 </li>
                 <li><a href="#growls">Boxes</a></li>
+                <li><a href="#browsers">Browser Support</a></li>
+                <li><a href="#colors">Colors</a></li>
                 <li><a href="#grid">Grid</a></li>
                 <li><a href="#growls">Growls</a></li>
+                <li><a href="#typography">Typography</a></li>
               </ul>
             </div>
           </div>
