adding image styling

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   </head>
   <body style="padding-top: 40px">
     <header>
-      <nav class="s-box s-fixed">
+      <nav class="s-box s-fixed s-grey">
         <div class="s-wrapper">
           <ul>
             <li><a href="#" class="s-box-heading">Website</a></li>
@@ -33,11 +33,27 @@
     </header>
     <main>
       <div class="s-wrapper">
+        <div class="s-col s-md-6">
+          <div class="s-box"><img src="https://pbs.twimg.com/profile_images/411758450700349440/fldsxTBx.jpeg" class="s-box-caption_left">
+            <div class="s-box-caption_right">
+              <h3>Title</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </div>
+          </div>
+        </div>
+        <div class="s-col s-md-6">
+          <div class="s-box">
+            <div class="s-box-caption_left">
+              <h3>Title</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </div><img src="https://pbs.twimg.com/profile_images/411758450700349440/fldsxTBx.jpeg" class="s-box-caption_right">
+          </div>
+        </div>
         <div class="s-col">
           <p>To learn more, <a href="#abc">Read this.</a></p>
         </div>
         <div class="s-break"></div>
-        <nav class="s-box">
+        <nav class="s-box s-grey">
           <ul>
             <li><a href="#"> <span class="s-left fa fa-search"></span> Item</a></li>
             <li><a href="#">Item</a></li>
@@ -55,7 +71,7 @@
             <li><a href="#">Item</a></li>
           </ul>
         </nav>
-        <nav class="s-box">
+        <nav class="s-box s-grey">
           <ul>
             <li><a id="modal" href="#" class="s-btn">Item</a></li>
             <li><a href="#" class="s-btn s-red">Item</a></li>
@@ -76,7 +92,7 @@
             <li><a href="#" class="s-btn">Item</a></li>
           </ul>
         </nav>
-        <nav class="s-box">
+        <nav class="s-box s-grey">
           <ul>
             <li><a href="#">Item</a></li>
             <li><a href="#" class="s-btn">Item</a></li>
@@ -88,7 +104,7 @@
             <li><a href="#">Item</a></li>
           </ul>
         </nav>
-        <nav class="s-box">
+        <nav class="s-box s-grey">
           <ul>
             <li><a href="#" class="s-box-heading">Website</a></li>
             <li><a href="#">Item</a></li>
@@ -104,7 +120,7 @@
         </nav>
         <article class="s-row">
           <div class="s-col s-4">
-            <nav class="s-box">
+            <nav class="s-box s-grey">
               <ul>
                 <li><a href="#" class="s-box-heading">Website</a></li>
                 <li><a href="#">Item</a></li>
@@ -120,7 +136,7 @@
             </nav>
           </div>
           <div class="s-col s-4">
-            <nav class="s-box">
+            <nav class="s-box s-grey">
               <ul>
                 <li><a href="#" class="s-btn">Item</a></li>
                 <li> <a href="#" class="s-btn">Item</a></li>
@@ -135,7 +151,7 @@
             </nav>
           </div>
           <div class="s-col s-4">
-            <nav class="s-box">
+            <nav class="s-box s-grey">
               <ul>
                 <li><a href="#" class="s-btn">Item</a></li>
                 <li>Item that is not a link.</li>
@@ -152,7 +168,7 @@
         </article>
         <article class="s-row">
           <div class="s-col s-4">
-            <nav class="s-box">
+            <nav class="s-box s-grey">
               <ul>
                 <li><a href="#" class="s-btn">Item</a></li>
                 <li><a href="#" class="s-btn s-blue">Item</a></li>
@@ -170,7 +186,7 @@
             </nav>
           </div>
           <div class="s-col s-4">
-            <nav class="s-box s-clear">
+            <nav class="s-box">
               <ul>
                 <li><a href="#" class="s-btn">Item</a></li>
                 <li><a href="#" class="s-btn s-blue">Item</a></li>
@@ -187,7 +203,7 @@
           <div class="s-col s-sm-6 s-md-4 s-lg-3"> 
             <h5>Heading</h5>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            <nav class="s-box">
+            <nav class="s-box s-dark">
               <ul>
                 <li><a href="#">Toolbar </a></li>
               </ul>
@@ -267,6 +283,7 @@
   </body>
   <script src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
   <script src="js/start.js"></script>
+  <script src="https://google-code-prettify.googlecode.com/svn/loader/run_prettify.js"></script>
   <script>
     $('p, span').s_endconcat()
     $('#modal').click(function() {
