--- a/docs.html
+++ b/docs.html
@@ -6,7 +6,7 @@
   <body style="padding-top: 40px">
     <header>
       <link rel="stylesheet" href="css/docs.css">
-      <nav class="s-box s-fixed">
+      <nav class="s-box s-fixed s-grey">
         <div class="s-wrapper">
           <ul>
             <li><a href="#" class="s-box-heading"> <span class="fa fa-book"></span> Start.css</a></li>
@@ -31,13 +31,13 @@
             <p>Boxes are the most versatile component of the Start library. These can function as navigation menus, toolboxes, or any generic container.</p>
             <h3>Navigation Boxes</h3>
             <p>Boxes for horizontal navigation should be filled with unordered lists (``ul``)</p>
-            <nav class="s-box">
+            <nav class="s-box s-grey">
               <ul>
                 <li><a href="#">Item</a></li>
                 <li><a href="#" class="s-btn">Item</a></li>
               </ul>
             </nav>
-            <pre>&lt;nav class=&quot;s-box&quot;&gt;
+            <pre>&lt;nav class=&quot;s-box s-grey&quot;&gt;
   &lt;ul&gt;
     &lt;li&gt;
       &lt;a href=&quot;#&quot;&gt;Item&lt;/a&gt;
@@ -49,7 +49,7 @@
 &lt;/nav&gt;</pre>
             <h4>Right-aligned</h4>
             <p>Use <code>.s-right</code> on the child ul to align right. <code>li.s-box-heading</code> will give you a formatted title.</p>
-            <nav class="s-box">
+            <nav class="s-box s-grey">
               <ul>
                 <li><a href="#">Item</a></li>
                 <li><a href="#" class="s-btn">Item</a></li>
@@ -58,7 +58,7 @@
                 <li><a href="#" class="s-btn">Item</a></li>
               </ul>
             </nav>
-            <pre>&lt;nav class=&quot;s-box&quot;&gt;
+            <pre>&lt;nav class=&quot;s-box s-grey&quot;&gt;
   &lt;ul&gt;
     &lt;li&gt;
       &lt;a href=&quot;#&quot;&gt;Item&lt;/a&gt;
@@ -75,13 +75,13 @@
 &lt;/nav&gt;</pre>
             <h4>Vertical</h4>
             <p>Add <code>.s-box_vertical</code> to align contents vertically.</p>
-            <nav class="s-box s-box_vertical">
+            <nav class="s-box s-box_vertical s-grey">
               <ul>
                 <li><a href="#">Item</a></li>
                 <li><a href="#">Item</a></li>
               </ul>
             </nav>
-            <pre>&lt;nav class=&quot;s-box s-box_vertical&quot;&gt;
+            <pre>&lt;nav class=&quot;s-box s-box_vertical s-grey&quot;&gt;
   &lt;ul&gt;
     &lt;li&gt;
       &lt;a href=&quot;#&quot;&gt;Item&lt;/a&gt;
@@ -135,10 +135,10 @@
             <p>Using <code>.s-col</code> without a measuring class will default to <code>.s-12</code></p>
             <section class="s-row">
               <div class="s-col s-4">
-                <div class="grid-example">s-col s-4</div>
+                <div class="grid-example s-box">s-col s-4</div>
               </div>
               <div class="s-col s-8">
-                <div class="grid-example">s-col s-8</div>
+                <div class="grid-example s-box">s-col s-8</div>
               </div>
             </section><br>
             <pre>&lt;section class=&quot;s-row&quot;&gt;
@@ -148,29 +148,29 @@
             <h3>Other examples</h3>
             <section class="s-row">
               <div class="s-col">
-                <div class="grid-example">s-col</div>
+                <div class="grid-example s-box">s-col</div>
               </div>
             </section><br>
             <section class="s-row">
               <div class="s-col s-4">
-                <div class="grid-example">s-col s-4</div>
+                <div class="grid-example s-box">s-col s-4</div>
               </div>
               <div class="s-col s-4">
-                <div class="grid-example">s-col s-4</div>
+                <div class="grid-example s-box">s-col s-4</div>
               </div>
               <div class="s-col s-4">
-                <div class="grid-example">s-col s-4</div>
+                <div class="grid-example s-box">s-col s-4</div>
               </div>
             </section><br>
             <section class="s-row">
               <div class="s-col s-3">
-                <div class="grid-example">s-col s-3</div>
+                <div class="grid-example s-box">s-col s-3</div>
               </div>
               <div class="s-col s-6">
-                <div class="grid-example">s-col s-6</div>
+                <div class="grid-example s-box">s-col s-6</div>
               </div>
               <div class="s-col s-3">
-                <div class="grid-example">s-col s-3</div>
+                <div class="grid-example s-box">s-col s-3</div>
               </div>
             </section><br>
             <h3>Responsive Grid</h3>
@@ -178,35 +178,35 @@
             <p>To specify a column size for a larger screen, use the additional size prefixes <code>sm</code>, <code>md</code>, <code>lg</code>, and <code>xl</code>.</p>
             <section class="s-row">
               <div class="s-col s-md-4">
-                <div class="grid-example">(s-col s-md-4) 4 columns in medium width</div>
+                <div class="grid-example s-box">(s-col s-md-4) 4 columns in medium width</div>
               </div>
               <div class="s-col s-md-8">
-                <div class="grid-example">(s-col s-md-8) 8 columns in medium width</div>
+                <div class="grid-example s-box">(s-col s-md-8) 8 columns in medium width</div>
               </div>
             </section><br>
             <section class="s-row">
               <div class="s-col">
-                <div class="grid-example">(s-col) Mobile devices tend to use one-column layouts more often.</div>
+                <div class="grid-example s-box">(s-col) Mobile devices tend to use one-column layouts more often.</div>
               </div>
               <div class="s-col">
-                <div class="grid-example">(s-col) So why bother specifying every time?</div>
+                <div class="grid-example s-box">(s-col) So why bother specifying every time?</div>
               </div>
               <div class="s-col s-lg-6">
-                <div class="grid-example">(s-col s-lg-6) Write only the classes needed for larger screens.</div>
+                <div class="grid-example s-box">(s-col s-lg-6) Write only the classes needed for larger screens.</div>
               </div>
               <div class="s-col s-lg-6">
-                <div class="grid-example">(s-col s-lg-6) Keep your HTML tidy.</div>
+                <div class="grid-example s-box">(s-col s-lg-6) Keep your HTML tidy.</div>
               </div>
             </section>
             <section class="s-row">
               <div class="s-col s-lg-4">
-                <div class="grid-example">(s-col s-lg-4) Responsive design</div>
+                <div class="grid-example s-box">(s-col s-lg-4) Responsive design</div>
               </div>
               <div class="s-col s-lg-4">
-                <div class="grid-example">(s-col s-lg-4) is</div>
+                <div class="grid-example s-box">(s-col s-lg-4) is</div>
               </div>
               <div class="s-col s-lg-4">
-                <div class="grid-example">(s-col s-lg-4) easy.</div>
+                <div class="grid-example s-box">(s-col s-lg-4) easy.</div>
               </div>
             </section>
             <h2 id="growls">Growls</h2>
@@ -282,6 +282,35 @@
             <p>
               <button onclick="$.sGrowl({color: 'red', icon: 'book',title: 'Test',text: 'Testing...1, 2, 3', delay: 3000, container: '#example-container'})" class="s-btn s-blue">Try it</button>
             </p>
+            <h2 id="images">Images</h2>
+            <h3>Using images as thumbnails</h3>
+            <p>Using a new class element of the <code>.s-box</code> block, we can easily create nicely-spaced left- or right-aligned thumbnail images.</p>
+            <div class="s-box"><img src="img/flower.jpg" style="width: 64px" class="s-box-caption_left">
+              <div class="s-box-caption_right">
+                <h5>Flowers</h5>
+                <p>Flowers are now on sale. Get your beautiful gift of flowers today. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              </div>
+            </div>
+            <pre>&lt;div class=&quot;s-box&quot;&gt;
+  &lt;img class=&quot;s-box-caption_left&quot; src=&quot;img/flowers.jpg&quot; /&gt;
+  &lt;div class=&quot;s-box-caption_right&quot;&gt;
+    &lt;h5&gt;Flowers&lt;/h5&gt;
+    &lt;p&gt;Flowers are now on sale. Get your beautiful gift of flowers today. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.&lt;/p&gt;
+  &lt;/div&gt;
+&lt;/div&gt;</pre>
+            <div class="s-box"><img src="img/flower.jpg" style="width: 64px" class="s-box-caption_right">
+              <div class="s-box-caption_left">
+                <h5>Flowers</h5>
+                <p>Flowers are now on sale. Get your beautiful gift of flowers today. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              </div>
+            </div>
+            <pre>&lt;div class=&quot;s-box&quot;&gt;
+  &lt;img class=&quot;s-box-caption_right&quot; src=&quot;img/flowers.jpg&quot; /&gt;
+  &lt;div class=&quot;s-box-caption_left&quot;&gt;
+    &lt;h5&gt;Flowers&lt;/h5&gt;
+    &lt;p&gt;Flowers are now on sale. Get your beautiful gift of flowers today. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.&lt;/p&gt;
+  &lt;/div&gt;
+&lt;/div&gt;</pre>
             <h2 id="typography">Typography</h2>
             <p>Typography relies mostly on standard HTML5 elements.</p>
             <p>Use hx (where x = 1-5) for headings and p, etc for basic text formatting.</p>
@@ -292,11 +321,12 @@
                 <li class="s-box-heading">
                   <p>Directory</p>
                 </li>
-                <li><a href="#growls">Boxes</a></li>
+                <li><a href="#boxes">Boxes</a></li>
                 <li><a href="#browsers">Browser Support</a></li>
                 <li><a href="#colors">Colors</a></li>
                 <li><a href="#grid">Grid</a></li>
                 <li><a href="#growls">Growls</a></li>
+                <li><a href="#images">Images</a></li>
                 <li><a href="#typography">Typography</a></li>
               </ul>
             </div>
@@ -308,6 +338,7 @@
   </body>
   <script src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
   <script src="js/start.js"></script>
+  <script src="https://google-code-prettify.googlecode.com/svn/loader/run_prettify.js"></script>
   <script>
     $('p, span').s_endconcat()
     $('#modal').click(function() {
