--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
           </div>
         </div>
         <div class="s-col s-md-6">
-          <div class="s-box">
+          <div class="s-box"><img src="https://pbs.twimg.com/profile_images/411758450700349440/fldsxTBx.jpeg" class="s-box-caption_right">
             <div class="s-box-caption_left">
               <h3>Title</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            </div><img src="https://pbs.twimg.com/profile_images/411758450700349440/fldsxTBx.jpeg" class="s-box-caption_right">
+            </div>
           </div>
         </div>
         <div class="s-col">
@@ -73,7 +73,7 @@
         </nav>
         <nav class="s-box s-grey">
           <ul>
-            <li><a id="modal" href="#" class="s-btn">Item</a></li>
+            <li><a id="launch-modal" href="#" class="s-btn">Launch Modal</a></li>
             <li><a href="#" class="s-btn s-red">Item</a></li>
             <li><a href="#" class="s-btn s-orange">Item</a></li>
             <li><a href="#" class="s-btn s-yellow">Item</a></li>
@@ -249,7 +249,7 @@
             <h1>9 Columns</h1>
           </div>
         </article>
-        <div class="s-modal">
+        <div id="modal" class="s-modal">
           <header>
             <h5>Modal Title<small class="s-close">&times;</small></h5>
           </header>
@@ -286,8 +286,8 @@
   <script src="https://google-code-prettify.googlecode.com/svn/loader/run_prettify.js"></script>
   <script>
     $('p, span').s_endconcat()
-    $('#modal').click(function() {
-      $('.s-modal').fadeIn('fast')
+    $('#launch-modal').click(function() {
+      $('#modal').fadeIn('fast')
     }) 
   </script>
   <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
